# atom

./: .gitignore  CMakeLists.txt
assets/models/: fireplace.glb  plane.glb  sphere.glb  su.glb  tree.glb
assets/shaders/: shader.wgsl  texture.wgsl  tri.wgsl
src/: Defines.h  main.cpp  shell.html
src/core/: 2dRenderSystem.h  3dRenderSystem.cpp  3dRenderSystem.h  App.cpp  App.h  Application.cpp  Application.h  CTransfrom.h  Components.h  Engine.cpp  Engine.h  ImageLoader.cpp  ImageLoader.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  ModelLoader.cpp  ModelLoader.h  Reader.cpp  Reader.h  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  Scene.cpp  Scene.h  System.cpp  System.h  Vertex.h  Window.cpp  Window.h  wgpu_atom.cpp  wgpu_atom.h
src/core/Camera/: CCamera.h  SCamera.cpp  SCamera.h
